Commit layout with css per component

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <base href="/" />
     <link rel="icon" type="image/x-icon" href="assets/logo.kittens.ico" />
   </head>
-  <body>
+  <body class="index-body">
     <app-root></app-root>
   </body>
 </html>
